Make use of String.formatted() method